--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -89,6 +89,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  justify-content: center;
   margin: 0 0.5rem;
 }
 
@@ -116,9 +117,7 @@
   display: flex;
   align-items: center;
   margin-left: auto;
-  margin-right: -0.7rem;
   position: relative;
-  top: 1px;
 }
 
 .timeline-arrow-svg svg {
