--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,8 +1,6 @@
 .hero {
-  width: 100vw;
-  max-width: 100vw;
   background: #fff;
-  padding: 25px 60px 25px 60px;
+  padding: 25px 0px 25px 0px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -13,7 +11,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  max-width: 1100px;
+  margin: 0 0;
   gap: 6rem;
   margin-top: 0.5rem;
   margin-bottom: 1.5rem;
