--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,6 +1,6 @@
 .contact {
-  width: 100vw;
-  max-width: 100vw;
+  width: 100%;
+  max-width: 100%;
   background: #fff;
   padding: 0 0 2.5rem 0;
   display: flex;
