--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -1,6 +1,6 @@
 .timeline {
-  width: 100vw;
-  max-width: 100vw;
+  width: 100%;
+  max-width: 100%;
   background: #fff;
   padding: 120px 0 120px 0;
   display: flex;
